<resources>
    <string name="app_name">DIA4_Android</string>
    <string name="hello_world">Hello World</string>
    <string name="change_text_view">Change Text View</string>
    <string name="input_text_here">Input text here...</string>
    <string name="splash_gym_desc">Splash gym desc</string>
    <string name="thrive_gym">THRIVE GYM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_fragment">Show Fragment</string>
    <string name="show_bottom_navigation">Show bottom navigation</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="transaction">Transaction</string>
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="to">To: </string>
    <string name="from">From: </string>
    <string name="from_space">"From: "</string>
    <string name="to_space">"To: "</string>
</resources>