<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".ComponentActivity">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:textColor="@color/Red"
        android:textStyle="bold|italic"
    />

    <Button
        android:id="@+id/btnChangeTv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/Red"
        android:layout_marginTop="12dp"
        android:text="@string/change_text_view"
    />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/input_text_here"
        android:inputType="phone"/>

</LinearLayout>